# backend/api/Controllers/UserController.cs
@@ -2,7 +2,7 @@ using MediatR;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Wallanoti.Src.Users.Application.Details;
-using Wallanoti.Src.Users.Domain.Models;
+using Wallanoti.Src.Users.Domain.Exceptions;
 
 namespace Wallanoti.Api.Controllers;
 
@@ -19,10 +19,19 @@ public sealed class UserController : ControllerBase
     }
 
     [HttpGet]
-    public async Task<User> Index()
+    [ProducesResponseType(typeof(UserDetailsResponse), StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status404NotFound)]
+    public async Task<ActionResult<UserDetailsResponse>> Index()
     {
-        var result = await _mediator.Send(new GetUserDetailsQuery());
+        try
+        {
+            var result = await _mediator.Send(new GetUserDetailsQuery());
 
-        return result;
+            return Ok(result);
+        }
+        catch (UserNotFoundException)
+        {
+            return NotFound();
+        }
     }
 }
